--- a/index.html
+++ b/index.html
@@ -19,8 +19,7 @@
 <center>
   	<h3 class="btn btn-info heading">AI DJ WEB APP
 	    <br><br>
-	    <span class="note">NOTE - Move your left-hand wrist up and down for increasing and decreasing the volume. 
-        Move your right-hand wrist up and down for increasing and decreasing the speed</span>
+	    <span class="note">NOTE - Lift your left-hand to play one song, and lift your right-hand to play a diffrent song</span>
   	</h3>
     <br><br>
     <div class="div_name">
