--- a/index.html
+++ b/index.html
@@ -17,17 +17,27 @@
 </head>
 <body background="background.jpg">
 <center>
-  	<h3 class="btn btn-info heading">AI DJ WEB APP
+  	<h3 class="btn btn-danger heading">AI DJ WEB APP
 	    <br><br>
-	    <span class="note">NOTE - Lift your left-hand to play one song, and lift your right-hand to play a diffrent song</span>
+	    <span class="note">NOTE - Move your left-hand wrist up and down for increasing and decreasing the volume. 
+        Move your right-hand wrist up and down for increasing and decreasing the speed</span>
   	</h3>
-    <br><br>
-    <div class="div_name">
-      <img src="music-note.jpg" class="div_name_img">
+    <div class="div_speed">
+      <img src="disk.gif" class="div_img">
       <br>
-      <h3 class="btn btn-info" id="song">song:</h3>
+      <h3 class="btn btn-danger UI" id="speed">Speed</h3>
     </div>
+
+    </h3>
+    <div class="div_volume">
+      <img src="disk.gif" class="div_img">
+      <br>
+      <h3 class="btn btn-danger UI" id="volume">Volume</h3>
+    </div>
+
 	<br><br>
+
+  <button onclick="play();" class="btn btn-success paly_button">Play</button>
 </center>
 
 <script src="main.js"></script>
